docs: part 3 - upgrade remaining documentation
Final batch of documentation upgrades focusing on cleanup and consistency.

File Changes:
- CONTRIBUTING.md: Streamlined to ~350 lines, added quickstart link
- docs/explanation/java25-design-philosophy.md: Renamed to java26-design-philosophy.md
- docs/reference/doctester-base-class.md: Renamed to dtr-test-api.md (Doctester→DTR naming)
- docs/reference/FAQ_AND_TROUBLESHOOTING.md: Repositioned as quick FAQ, links to TROUBLESHOOTING.md
- docs/reference/KNOWN_ISSUES.md: Removed obsolete HTTP client issues, updated version info
- docs/reference/configuration.md: Updated for Java 26, added new output formats
- docs/how-to/benchmarking.md: Positioned as recipe guide, links to Tutorial 4 and PERFORMANCE.md
- docs/how-to/performance-tuning.md: Positioned as quick recipes, links to PERFORMANCE.md
- docs/how-to/advanced-rendering-formats.md: Updated for Java 26, added new templates
- docs/tutorials/virtual-threads-lightweight-concurrency.md: Updated as advanced tutorial
- docs/explanation/architecture.md: Added redirect note to new ARCHITECTURE.md
- docs/MIGRATING.md: Added historical migration guides reference

Archived Tutorials (superseded by new 6-tutorial series):
- docs/tutorials/your-first-doctest.md → archive/tutorials/your-first-doctest-pre-2.6.md
- docs/tutorials/testing-a-rest-api.md → archive/tutorials/testing-a-rest-api-pre-2.6.md
- docs/tutorials/records-sealed-classes.md → archive/tutorials/records-sealed-classes-pre-2.6.0.md

Archived Migration Guides:
- docs/how-to/MIGRATION_2.4_to_2.5.md → archive/MIGRATION_2.4_to_2.5.md

Version Updates: Java 25 → Java 26, 2.6.0 → 2026.3.0 throughout all files.

18 files changed, +1028 insertions, -2352 deletions